# simulateur_trafic_gh

./: README.md  exception.py  main.py  pyproject.toml  resultats.json  setup.cfg
.github/workflows/: ci.yml
IO/: affichage.py  export.py
core/: analyseur.py  simulateur.py
data/: config_reseau.json
models/: feu_rouge.py  reseau.py  route.py  vehicule.py
simulateur_trafic.egg-info/: PKG-INFO  SOURCES.txt
simulateur_trafic_gh.egg-info/: PKG-INFO
tests/: conftest.py  test_feu_rouge.py  test_reseau.py  test_route.py  test_route_feu.py  test_simulateur.py  test_vehicule.py
