[metadata]
name = simulateur-trafic
version = 1.0.0
author = Yosr ghanmi
author_email = yosraghanmi23@gmail.com
description = Simulateur de trafic routier (routes, véhicules, réseau, analyse)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/simulateur_trafic
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.package_data]
* = *.json